# gala

./: Makefile.gi-docgen  README.org  meson.build
daemon/: Main.vala
gala-min/: Main.vala  meson.build
gi-docgen.d/: generic.toml
lib/: ShadowEffect.vala  Utils.vala  WindowManager.vala
plugins/maskcorners/: Main.vala
plugins/pip/: PopupWindow.vala  ShadowEffect.vala  meson.build
src/: InternalUtils.vala  KeyboardManager.vala  Main.vala  NotificationStack.vala  ShadowEffect.vala  WindowManager.vala  meson.build
src/Background/: BackgroundContainer.vala  BackgroundSource.vala
src/HotCorners/: HotCornerManager.vala
src/Widgets/: MultitaskingView.vala  PointerLocator.vala  ScreenShield.vala  Tooltip.vala  WindowClone.vala  WindowSwitcher.vala  WorkspaceClone.vala
src/Widgets/WindowSwitcher/: WindowSwitcher.vala
vapi/: Clutter-10.metadata  Clutter-9.metadata  Meta-10.metadata  Meta-11.metadata  Meta-9.metadata  libmutter.deps  libmutter.vapi  meson.build  mutter-clutter.vapi
