
# ----------------------------------------------------------------------

gala_min_bin_sources = files(
  'Main.vala'
)

gala_min_bin = executable(
    'gala-min',
    gala_min_bin_sources,
    dependencies: [ posix_dep, base_deps, mutter_dep, ],
#    include_directories: config_inc_dir,
#    install_rpath: mutter_typelib_dir,
#    install: true
)
